cvat/chart/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cvat-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`cvat.my-cluster.com`) 
    kind: Rule
    services:
    - name: cvat-frontend-service
      namespace: cvat
      port: 80

  - match: Host(`cvat.my-cluster.com`) && PathPrefix(`/api`)
    kind: Rule
    services:
    - name: cvat-backend-service
      namespace: cvat
      port: 8080

  - match: Host(`cvat.my-cluster.com`) && PathPrefix(`/admin`)
    kind: Rule
    services:
    - name: cvat-backend-service
      namespace: cvat
      port: 8080

  - match: Host(`cvat.my-cluster.com`) && PathPrefix(`/static`)
    kind: Rule
    services:
    - name: cvat-backend-service
      namespace: cvat
      port: 8080

  - match: Host(`cvat.my-cluster.com`) && PathPrefix(`/django-rq`)
    kind: Rule
    services:
    - name: cvat-backend-service
      namespace: cvat
      port: 8080

  - match: Host(`cvat.my-cluster.com`) && PathPrefix(`/profiler`)
    kind: Rule
    services:
    - name: cvat-backend-service
      namespace: cvat
      port: 8080

  tls:
    secretName: wildcard-cert
